--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-padding-top: 100px; /* Adjust this value based on your header height */
+  scroll-behavior: smooth;
+}
 
 .slick-slide > div {
     margin: 0 24px;
